# Bastion

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  INTEGRATION_NOTES.md  MVP_ROADMAP.md  OPERATOR_GUIDE.md  RELEASE_PROCESS.md  SAFETY_MODEL.md  THREAT_MODEL.md
docs/explanations/: 01-threat-forecast.md  02-identity-blast-radius.md  03-detection-validation.md  04-assets-exposure.md  05-correlation-spine.md  06-safety-layer.md  README.md
scripts/: build_portable.py
src/greynoc_bastion/: __init__.py  app.py  auth.py  cli.py  config.py
src/greynoc_bastion/adapters/: __init__.py  base.py  detections_adapter.py  detector_engine_adapter.py  dmz_adapter.py  greyiq_adapter.py  homeguard_adapter.py  nhi_adapter.py  playbooks_adapter.py  port_manager_adapter.py
src/greynoc_bastion/db/: __init__.py  database.py  schema.sql
src/greynoc_bastion/fixtures/detections/rules/: GNOC-AUTH-001.json  GNOC-C2-001.json  GNOC-COLL-001.json  GNOC-DISC-001.json  GNOC-EVAS-001.json  GNOC-EXEC-001.json  GNOC-EXFIL-001.json  GNOC-IMP-001.json  GNOC-LAT-001.json  GNOC-LNX-001.json  GNOC-PERS-001.json  GNOC-PRIV-001.json  GNOC-WEB-001.json
src/greynoc_bastion/fixtures/detections/tests/: GNOC-AUTH-001.json  GNOC-C2-001.json  GNOC-COLL-001.json  GNOC-DISC-001.json  GNOC-EVAS-001.json  GNOC-EXEC-001.json  GNOC-EXFIL-001.json  GNOC-IMP-001.json  GNOC-LAT-001.json  GNOC-LNX-001.json  GNOC-PERS-001.json  GNOC-PRIV-001.json  GNOC-WEB-001.json
src/greynoc_bastion/fixtures/runbooks/: account-discovery.md  auth-bruteforce.md  c2-beaconing.md  cron-persistence.md  data-collection.md  encoded-powershell.md  large-egress.md  linux-sensitive-file.md  log-tampering.md  ransomware-impact.md  remote-root-ssh.md  sudo-escalation.md  web-test-string.md
src/greynoc_bastion/fixtures/sample_project/: .env.example  .mcp.json  agents.yaml  k8s-secret.yaml
src/greynoc_bastion/fixtures/scenarios/: adversary-chain-sim.json  auth-bruteforce-sim.json  purple-regression.json  web-test-string-sim.json
src/greynoc_bastion/fixtures/telemetry/: adversary-chain.json  auth-bruteforce.json  purple-regression.json  web-test-string.json
src/greynoc_bastion/fixtures/threat_feeds/: cve_sample.json  epss_sample.json  github_sample.json  kev_sample.json  ransomwatch_sample.json  rss_sample.xml  threatfox_sample.json  urlhaus_sample.json
src/greynoc_bastion/knowledge/: __init__.py  ai_abuse.py  attack.py  owasp.py  postquantum.py
src/greynoc_bastion/safety/: __init__.py  fetcher.py  masking.py  netguard.py  status.py
src/greynoc_bastion/schemas/: __init__.py  asset.py  base.py  case.py  detection.py  enums.py  evidence.py  finding.py  identity.py  playbook.py  report.py  threat.py
src/greynoc_bastion/services/: __init__.py  ai_assistant.py  asset_exposure.py  case_management.py  correlation.py  detection_validation.py  evidence_center.py  feed_cache.py  identity_blast_radius.py  notifications.py  orchestrator.py  report_center.py  scheduler.py  signing.py  telemetry_ingest.py  threat_forecast.py  threat_intel_export.py
src/greynoc_bastion/utils/: __init__.py  logging.py  redos.py
src/greynoc_bastion/web/: __init__.py  server.py
src/greynoc_bastion/web/static/: bastion.css
src/greynoc_bastion/web/templates/: assets.html  audit.html  base.html  cases.html  correlation.html  detections.html  error.html  forecast.html  identities.html  login.html  overview.html  playbook_detail.html  playbooks.html  reports.html  safety.html  schedules.html  settings.html  users.html
tests/: conftest.py  test_adapters.py  test_asymmetric_signing.py  test_auth_rbac.py  test_cases.py  test_cli_and_app.py  test_dashboard_security.py  test_detection_validation.py  test_engine_capacity.py  test_evidence_signing.py  test_feed_cache.py  test_identity_scan.py  test_landing.py  test_live_fetch_and_rules.py  test_qaqc_regressions.py  test_reports.py  test_safety.py  test_scheduler_orchestrator.py  test_schemas.py  test_telemetry_and_notify.py
(+1 files in other folders)
