[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "greynoc-bastion"
version = "0.1.0"
description = "GreyNOC Bastion — local-first defensive cyber operations platform for under-defended organizations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "GreyNOC" }]
keywords = ["defensive-security", "threat-intelligence", "detection-engineering", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
bastion = "greynoc_bastion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
greynoc_bastion = [
    "web/templates/*.html",
    "web/static/*",
    "fixtures/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
